# yaqd-cookiecutter-python

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: python-mypy.yml  python-publish.yml  run-entry-points.yml
{{cookiecutter.project_slug}}/{{cookiecutter.project_src_dir}}/: __init__.py  __version__.py  {{ cookiecutter.first_daemon_kind }}.toml  {{cookiecutter.first_daemon_module}}.py
