[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
authors = [
  {name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}"},
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "yaqd-core>=2020.06.3",
]
dynamic = ["version"]
{%- set license_spdx = {
"GNU Lesser General Public License v3 (LGPL)": "LGPL-3.0-only",
"MIT license": "MIT",
"BSD license": "BSD-3-Clause",
"ISC license": "ISC",
"Apache Software License 2.0": "Apache-2.0",
"GNU General Public License v3 (GPL)": "GPL-3.0-only"
} %}
{%- set license_classifiers = {
"GNU Lesser General Public License v3 (LGPL)": "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
"MIT license": "License :: OSI Approved :: MIT License",
"BSD license": "License :: OSI Approved :: BSD License",
"ISC license": "License :: OSI Approved :: ISC License (ISCL)",
"Apache Software License 2.0": "License :: OSI Approved :: Apache Software License",
"GNU General Public License v3 (GPL)": "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
} %}
{%- if cookiecutter.open_source_license in license_classifiers %}
license="{{ license_spdx[cookiecutter.open_source_license] }}"
{%- endif %}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    {%- if cookiecutter.open_source_license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.open_source_license] }}",
    {%- endif %}
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Home Page" = "https://yaq.fyi"
Source = "https://github.com/yaq-project/{{ cookiecutter.project_slug }}"
Issues = "https://github.com/yaq-project/{{ cookiecutter.project_slug }}/issues"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[project.scripts]
yaqd-{{ cookiecutter.first_daemon_kind }} = "{{ cookiecutter.project_src_dir }}.{{ cookiecutter.first_daemon_module }}:{{ cookiecutter.class_name }}.main"


[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py10', 'py11']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
